--- a/src/playground/BUILD.bazel
+++ b/src/playground/BUILD.bazel
@@ -17,3 +17,13 @@ cc_library(
         "//visibility:public",
     ],
 )
+
+cc_binary(
+    name = "main",
+    srcs = [
+        "main.cpp",
+    ],
+    deps = [
+        "//src/playground/dod/PhysicsSystem:PhysicsSystem",
+    ],
+)
